Audio bug on mobile devices fixed

--- a/style.css
+++ b/style.css
@@ -23,6 +23,17 @@
 	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
+#access {
+	position:absolute;
+	    top:0;
+		    left:0;
+			    width:100%;
+				    height:100%;
+					background-color: #000;
+					color: #fff;
+					text-align:center;
+}
+
 label.myLabel input[type="file"] {
 	    position: fixed;
 		    top: -1000px;
